[tool.poetry]
name = "ChronAccRet"
version = "0.1.0"
description = "source code for ECCV 2024 paper CAR"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.0.0+cu118", source = "torch_cu118"}
torchvision = {version = "0.15.1+cu118", source = "torch_cu118"}
torchaudio = {version = "2.0.1+cu118", source = "torch_cu118"}
pytorch-lightning = "2.0.9"
einops = "0.6.1"
hydra-core = "1.3.2"
numpy = "1.24.1"
pillow = "^10.3.0"
scipy = "1.12"
sympy = "1.11.1"
transformers = "^4.42.3"
clip = {git = "https://github.com/openai/CLIP.git"}
hydra-colorlog = "^1.2.0"
async-timeout = "^4.0.3"
orjson = "^3.10.6"
nomkl = "^0.0.3"
scikit-learn = "^1.6.1"
numexpr = "^2.10.2"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
